# crude-fleet-scheduler

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
app/components/fleet_timeline/: README.md  __init__.py  index.html  package-lock.json  package.json  vite.config.ts
app/components/fleet_timeline/src/: FleetTimeline.tsx  main.tsx
docs/: formulation.md  overview.md
src/crude_fleet_scheduler/solver/: __init__.py
tests/: test_smoke.py  test_solver.py
