[project]
name = "crude-fleet-scheduler"
version = "0.1.0"
description = "MILP-based crude tanker fleet scheduling with SOS2 speed-fuel linearization."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Denis Joly", email = "denis.a.joly@proton.me" }]
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "geopandas>=1.0",
    "pydantic>=2.7",
    "gurobipy>=11.0",
    "pyomo>=6.7",
    "highspy>=1.7",
    "searoute>=1.1",
    "plotly>=5.22",
    "streamlit>=1.35",
    "streamlit-component-lib>=2.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crude_fleet_scheduler"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
